<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shrine_pink_50"
    android:orientation="vertical"
    tools:context=".ui.search.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_back"
            style="@style/Widget.Material3.Button.Icon"
            android:drawableLeft="@drawable/ic_arrow_back_ios"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/shrine_pink_50"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plz_enter_search"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:id="@+id/linearlayout_search_recent_searches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:layout_weight="1"
                android:text="@string/recently_search_keyword"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textview_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/delete_all"
                android:textSize="14sp"
                android:textColor="@color/tertiary"
                android:textStyle="bold" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent_searches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_no_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_related_search_terms"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_auto_complete_searches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />
</LinearLayout>