<?xml version="1.0" encoding="utf-8"?>
<layout tools:context=".view.intro.myStore.MyStoreFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.myproject.cloudbridge.viewModel.StoreManagementViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shrine_pink_100"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/shrine_pink_100"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/arrow_back_24px"
                android:theme="?attr/actionBarTheme" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="나의 매장"
                    android:textSize="23sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </com.google.android.material.appbar.MaterialToolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/left_cut_layout"
                android:elevation="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/inputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/main_image"
                            myStoreImage="@{vm.myStore.image}"
                            android:layout_width="250dp"
                            android:layout_height="250dp"
                            android:scaleType="centerCrop"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/ceoName"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_ceo_name_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{vm.myStore.ceoName}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/crn"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_cpr_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{vm.myStore.crn}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/storeName"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_name_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{ vm.myStore.storeName}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/storeAddr"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_addr_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{vm.myStore.address}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/storeContact"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_phone_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{vm.myStore.contact}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/storeKind"
                            android:textColor="@color/blue_grey"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/store_kind_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@{vm.myStore.kind}"
                            android:textColor="@color/shrine_pink_900"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#c8c8c8" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/btn_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnUpdate"
                        style="@style/TextAppearance.App.Button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/modifyStoreInfo"
                        android:textColor="@color/shrine_pink_50"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnDelete"
                        style="@style/TextAppearance.App.Button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/deleteStore"
                        android:textColor="@color/shrine_pink_50"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnMenu"
                        style="@style/TextAppearance.App.Button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_menu"
                        android:textColor="@color/shrine_pink_50"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>